[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-response-rl"
version = "0.1.0"
description = "Gymnasium-compatible incident response environment for RL and LLM agent evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "gymnasium>=0.29,<1.0",
  "httpx>=0.27,<1.0",
  "openai>=2.7.2,<3.0",
  "openenv-core>=0.2.3",
  "pydantic>=2.8,<3.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]
platform = [
  "huggingface_hub>=0.24,<1.0",
]

[project.scripts]
server = "server.app:main"
incident-api = "server.app:main"
incident-baseline = "incident_response_rl.inference:main"
incident-smoke = "incident_response_rl.smoke:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
